deploy/k8s/overlays/dev/patch-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cistafirma-backend
spec:
  replicas: 1
